static/global.css
@font-face {
  font-family: Archivo;
  src: url(/font/Archivo-VariableFont_wdth\,wght.woff2);
  font-display: swap;
}

@font-face {
  font-family: "Archivo";
  font-display: swap;
  src: url("/font/font2/archivo-v19-latin-regular.woff2") format("woff2");
}

/* @font-face {
  font-display: swap;
  font-family: "Martian Mono";
  src: url("/font/font2/martian-mono-v3-latin-regular.woff2") format("woff2");
} */

@font-face {
  font-family: "Martian Mono";
  src: url("/font/Globs.ttf");
}

@font-face {
  font-family: Flux;
  src: url(/font/paplane.woff2);
}

* {
  box-sizing: border-box;
  margin: 0;
  padding: 0;
  font-family: "Flux", sans-serif;
}

:root {
  --black: #bfbfc8;
  --grey: #666666;
  --white: #262525;
  --blue: #f7d436;

  --martian-mono: "Martian Mono", system-ui;
}

body {
  background-color: var(--white);
}

h1,
h2,
h3,
h4,
h5,
h6,
p,
a,
li,
button {
  color: var(--black);
}

svg path {
  fill: var(--black);
}

h1,
h2,
h3,
h4,
h5,
h6 {
  font-family: "Flux", sans-serif;
  line-height: 1.5;
}

p {
  font-family: "Flux", sans-serif;
  font-family: Arial, Helvetica, sans-serif;
  
}

h1 {
  font-size: 4.25rem;
  font-weight: 800;
  text-transform: uppercase;
}

h2 {
  font-size: 3.75rem;
}

h3 {
  font-size: 3rem;

  text-transform: capitalize;
}

h4 {
  font-size: 2rem;
}

h5 {
  font-size: 1.5rem;
}

h6 {
  font-size: 1.5rem;
}

p {
  font-size: 1.12rem;
}

a {
  font-family: var(--martian-mono);
  color: var(--blue);
  text-transform: uppercase;
  text-decoration: none;
}

a:focus-visible,
button:focus-visible {
  color: var(--blue);
  font-weight: bolder;
  border: 3px dashed var(--blue);
}

.subtext {
  font-size: 1rem;
  line-height: 1.5rem;
  letter-spacing: -0.25px;
}

@media (max-width: 35em) {
  h1 {
    font-size: 2.5rem;
    line-height: 100%;
  }

  h2 {
    font-size: 2.25rem;
    line-height: 2.5rem;
  }

  h3 {
    font-size: 2rem;
    line-height: 1.5rem;
  }

  h4 {
    font-size: 1.5rem;
    line-height: 2rem;
  }

  h5 {
    font-size: 1.12rem;
    line-height: 2rem;
  }

  h6 {
    font-size: 1.12rem;
    line-height: 2rem;
  }
}

header {
  border-bottom: 1px solid var(--black);
}

main {
  line-height: 1.5;
  padding: 2rem;
  border-bottom: 1px solid var(--black);
}

@media (min-width: 43rem) {
  header,
  main,
  footer {
    width: 100%;
    max-width: calc(100vw - 2rem);
  }

  header {
    margin: 1rem;
    margin-bottom: 0;
    border: solid var(--black);
    border-width: 1px;
  }

  main {
    margin: 0 1rem;
    border: solid var(--black);
    border-width: 0px 1px 1px 1px;
    border-top: none;
    padding: 1rem;
  }

  footer {
    margin: 0 1rem 1rem 1rem;
    border: solid var(--black);
    border-width: 0px 1px 1px 1px;
  }
}

@media (width > 50rem) {
  main {
    border-left: none;
  }
}

